k8s/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a2083eb4db0074dda9b5dd49fbd38b93-479232308.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mern-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: mern-backend
            port:
              number: 5000
